--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,7 @@
 <div class="container mt-5" style="width: 500px; outline: 3px orange solid; height: 500px;">
+  <div class="description">
+    <h1>Let's make your link shorter!</h1>
+  </div>
   <form action="/" class="d-flex flex-column justify-content-between;">
     <input class="form-control" type="text" name="link" placeholder="http://">
     <button class="btn btn-success" type="submit">Generate link!</button>
