feat: add results page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
   <div class="description">
     <h1>Let's make your link shorter!</h1>
   </div>
-  <form action="/" class="d-flex flex-column justify-content-between;">
+  <form action="/" method="POST" class="d-flex flex-column justify-content-between;">
     <input class="form-control" type="text" name="link" placeholder="http://">
     <button class="btn btn-success" type="submit">Generate link!</button>
   </form>
