feat: add generate shortened URL function

--- a/views/result.hbs
+++ b/views/result.hbs
@@ -7,7 +7,7 @@
   <div class="fresh-result">
 
     <h1 style="color:red;">{{ freshResult.originalURL }}</h1>
-    <h2 style="color:red;">http://localhost:3000/{{ freshResult.shortenedURL }}</h2>
+    <h2 style="color:red;">{{ freshResult.shortenedURL }}</h2>
 
     <h1>我現在拿不到我剛生好的結果QQ</h1>
   </div>
